fix broken image

--- a/week-02/about-me.html
+++ b/week-02/about-me.html
@@ -5,7 +5,7 @@
    </head>
    <body>
       <h1>Talley, David</h1>
-	  <p><img src="path/image.jpg" alt="what this image is about"/>about me...<br/></p>
+	  <p>about me...<br/></p>
 	  <p>more about me</p>
    </body>
 </html>
